changed auth providers
